--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -1,4 +1,27 @@
 /**
+ * COLOR PALLETE
+ */
+
+// Primary colors
+$blue: #2980B9;
+$dark-blue: #172B4D;
+$snow: #FAFCFF;
+
+// Secondary colors
+$red: #DF5D56;
+$green: #76BF96;
+$gold: #FFC107;
+$purple: #6274F1;
+
+// Neutrals
+$black: #000000;
+$dark-gray: #4A4A4A;
+$medium-gray: #737373;
+$light-gray: #B2B2B2;
+$allbirds-gray: #EAEAEA;
+$white: #FFFFFF;
+
+/**
  * GENERAL SPACING
  */
 
@@ -53,6 +76,11 @@
     background: rgba(0, 0, 0, 0.0375);
     padding: 1rem;
     border-right: 1px solid rgba(0, 0, 0, 0.15);
+
+    h2 {
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
   }
 
   #app {
