--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -1,5 +1,5 @@
 /**
- * COLOR PALLETE
+ * COLOR PALETTE
  */
 
 // Primary colors
@@ -29,6 +29,10 @@ $white: #FFFFFF;
 
 .bold {
   font-weight: bold;
+}
+
+.light-gray-text {
+  color: $light-gray;
 }
 
 // General spacer elements
@@ -63,6 +67,18 @@ $white: #FFFFFF;
   height: 4rem;
 }
 
+.marg-bot-0 {
+  margin-bottom: 0rem;
+}
+
+.marg-bot-05 {
+  margin-bottom: 0.5rem;
+}
+
+.marg-bot-1 {
+  margin-bottom: 1rem;
+}
+
 /**
  * SIDEBAR
  */
@@ -73,11 +89,32 @@ $white: #FFFFFF;
   align-items: stretch;
 
   .sidebar {
-    background: rgba(0, 0, 0, 0.0375);
+    background: $snow;
     padding: 1rem;
-    border-right: 1px solid rgba(0, 0, 0, 0.15);
+    border-right: 1px solid $allbirds-gray;
+    box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.0375);
+
+    .open,
+    .closed {
+      display: inline-block;
+      width: 0.5rem;
+      height: 0.5rem;
+      margin-bottom: 0.125rem;
+      background: $light-gray;
+      border-radius: 50%;
+      margin-right: 0.5rem;
+    }
+
+    .open {
+      background: $green;
+    }
+
+    .closed {
+      background: $red;
+    }
 
     h2 {
+      color: $light-gray;
       font-weight: bold;
       margin-bottom: 1rem;
     }
@@ -88,17 +125,25 @@ $white: #FFFFFF;
   }
 }
 
+// Responsive screen styling on large screen
+@media screen and (min-device-width: 848px) and (min-width: 1024px) {
+  .sidebar {
+    padding: 1rem 2rem !important;
+  }
+}
+
 /**
  * NAVBAR
  */
 
 .navbar {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid $allbirds-gray;
   display: flex;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 
   h1 {
-    padding: 1rem;
+    font-size: 1.4rem;
+    padding: 0.7rem 1rem;
   }
 
   ul {
@@ -117,11 +162,27 @@ $white: #FFFFFF;
  * FOOTER
  */
 footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
-  padding: 1rem;
-  background: rgba(0, 0, 0, 0.0375);
+  border-top: 1px solid $allbirds-gray;
+  padding: 1rem 1rem 2rem 1rem;
+  background: $snow;
 
-  h1 {
-    font-size: 1.2rem;
+  .container {
+    display: flex;
+
+    .footer-nav,
+    .text {
+      flex: 1;
+    }
+
+    h1 {
+      font-size: 1.4rem;
+      margin-bottom: 0.5rem;
+    }
+
+    h3 {
+      margin-top: 0.4rem;
+      font-size: 1rem;
+      margin-bottom: 0.5rem;
+    }
   }
 }
