--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -1,188 +1,6 @@
-/**
- * COLOR PALETTE
- */
-
-// Primary colors
-$blue: #2980B9;
-$dark-blue: #172B4D;
-$snow: #FAFCFF;
-
-// Secondary colors
-$red: #DF5D56;
-$green: #76BF96;
-$gold: #FFC107;
-$purple: #6274F1;
-
-// Neutrals
-$black: #000000;
-$dark-gray: #4A4A4A;
-$medium-gray: #737373;
-$light-gray: #B2B2B2;
-$allbirds-gray: #EAEAEA;
-$white: #FFFFFF;
-
-/**
- * GENERAL SPACING
- */
-
-// Text stying
-
-.bold {
-  font-weight: bold;
-}
-
-.light-gray-text {
-  color: $light-gray;
-}
-
-// General spacer elements
-
-.space-0,
-.space-1,
-.space-2,
-.space-3,
-.space-4 {
-  width: 100%;
-  display: block;
-  position: relative;
-}
-
-.space-0 {
-  height: 0rem;
-}
-
-.space-1 {
-  height: 1rem;
-}
-
-.space-2 {
-  height: 2rem;
-}
-
-.space-3 {
-  height: 3rem;
-}
-
-.space-4 {
-  height: 4rem;
-}
-
-.marg-bot-0 {
-  margin-bottom: 0rem;
-}
-
-.marg-bot-05 {
-  margin-bottom: 0.5rem;
-}
-
-.marg-bot-1 {
-  margin-bottom: 1rem;
-}
-
-/**
- * SIDEBAR
- */
-
-#wrapper {
-  min-height: calc(100vh - 56px);
-  display: flex;
-  align-items: stretch;
-
-  .sidebar {
-    background: $snow;
-    padding: 1rem;
-    border-right: 1px solid $allbirds-gray;
-    box-shadow: 2px 0px 4px rgba(0, 0, 0, 0.0375);
-
-    .open,
-    .closed {
-      display: inline-block;
-      width: 0.5rem;
-      height: 0.5rem;
-      margin-bottom: 0.125rem;
-      background: $light-gray;
-      border-radius: 50%;
-      margin-right: 0.5rem;
-    }
-
-    .open {
-      background: $green;
-    }
-
-    .closed {
-      background: $red;
-    }
-
-    h2 {
-      color: $light-gray;
-      font-weight: bold;
-      margin-bottom: 1rem;
-    }
-  }
-
-  #app {
-    flex: 1;
-  }
-}
-
-// Responsive screen styling on large screen
-@media screen and (min-device-width: 848px) and (min-width: 1024px) {
-  .sidebar {
-    padding: 1rem 2rem !important;
-  }
-}
-
-/**
- * NAVBAR
- */
-
-.navbar {
-  border-bottom: 1px solid $allbirds-gray;
-  display: flex;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
-
-  h1 {
-    font-size: 1.4rem;
-    padding: 0.7rem 1rem;
-  }
-
-  ul {
-    flex: 1;
-    text-align: right;
-    padding: 0rem 0.5rem;
-
-    li {
-      display: inline-block;
-      padding: 1rem 0.5rem;
-    }
-  }
-}
-
-/**
- * FOOTER
- */
-footer {
-  border-top: 1px solid $allbirds-gray;
-  padding: 1rem 1rem 2rem 1rem;
-  background: $snow;
-
-  .container {
-    display: flex;
-
-    .footer-nav,
-    .text {
-      flex: 1;
-    }
-
-    h1 {
-      font-size: 1.4rem;
-      margin-bottom: 0.5rem;
-    }
-
-    h3 {
-      margin-top: 0.4rem;
-      font-size: 1rem;
-      margin-bottom: 0.5rem;
-    }
-  }
-}
+@import './spacing';
+@import './palette';
+@import './navbar';
+@import './footer';
+@import './text';
+@import './sidebar';
