--- a/src/shared/styles/navbar.scss
+++ b/src/shared/styles/navbar.scss
@@ -3,13 +3,14 @@
  */
 
 .navbar {
+  padding: 0rem 0.5rem;
   border-bottom: 1px solid $allbirds-gray;
   display: flex;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 
   h1 {
     font-size: 1.4rem;
-    padding: 0.7rem 1rem;
+    padding: 0.7rem 0.5rem;
   }
 
   ul {
@@ -29,6 +30,29 @@
         &:active {
           color: $medium-gray;
         }
+      }
+    }
+  }
+
+  #sidebar-toggle {
+    margin: 1rem;
+    width: 2rem;
+    cursor: hand;
+    cursor: pointer;
+
+    .bar {
+      width: 100%;
+      height: 2px;
+      background: $light-gray;
+    }
+
+    .bar + .bar {
+      margin-top: calc(0.7rem - 2px);
+    }
+
+    &:hover {
+      .bar {
+        background: $medium-gray;
       }
     }
   }
