preliminary menu toggling

--- a/src/shared/styles/sidebar.scss
+++ b/src/shared/styles/sidebar.scss
@@ -8,6 +8,7 @@
   align-items: stretch;
 
   .sidebar {
+    display: block;
     background: $snow;
     padding: 1rem;
     border-right: 1px solid $allbirds-gray;
