--- a/src/shared/styles/sidebar.scss
+++ b/src/shared/styles/sidebar.scss
@@ -42,6 +42,36 @@
 
   #app {
     flex: 1;
+    transition: all 1s ease;
+    width: 100%;
+
+    &.hidden {
+      // flex: none;
+      // position: absolute;
+    }
+  }
+}
+
+#shaddow {
+  z-index: 1029;
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+
+  &.fade-in {
+    display: block;
+    opacity: 0;
+    animation: fadeIn .4s ease-in 1 forwards;
   }
 }
 
@@ -53,5 +83,46 @@
 
   .sidebar {
     max-width: 50vw;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  #wrapper{
+    display: block;
+
+    .sidebar {
+      transition: all 0.6s ease;
+      z-index: 1030;
+      position: fixed;
+      height: 100%;
+      width: auto;
+      max-width: 95vw;
+      top: 0;
+      left: -95vw;
+
+      &.active {
+        left: 0;
+      }
+    }
+  }
+}
+
+@media screen and (max-device-width: 720px) {
+  #wrapper{
+    display: block;
+
+    .sidebar {
+      transition: all 0.8s ease;
+      z-index: 1030;
+      position: fixed;
+      height: 100%;
+      width: auto;
+      max-width: 95vw;
+      top: 0;
+
+      &.active {
+        left: 0;
+      }
+    }
   }
 }
