--- a/src/shared/styles/filter.scss
+++ b/src/shared/styles/filter.scss
@@ -1,10 +1,40 @@
 .filter {
+  padding-bottom: 2rem;
+
+  #filterContent {
+    padding: 0rem 1rem;
+    overflow: hidden;
+    max-height: 0px;
+    transition: all 0.4s ease;
+
+    &.active {
+      max-height: 50vh;
+    }
+  }
+
   h2 {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 
   li {
     font-size: 1rem;
+  }
+
+  .filterToggleWrapper {
+    text-align: right;
+    width: 100%;
+
+    .filterToggle {
+      margin-bottom: 1rem;
+      font-weight: bold;
+      font-size: 1.2rem;
+      display: inline-block;
+      color: $light-gray;
+
+      &:hover {
+        color: $medium-gray;
+      }
+    }
   }
 }
