--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -18,9 +18,10 @@
   min-height: calc(100vh - 50px);
 
   .card {
-    border: 0px solid transparent;
+    border: 1px solid rgba(0, 0, 0, 0.075);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
     background: white;
+    border-radius: 0.4rem;
     opacity: 1;
   }
 }
