--- a/src/shared/styles/navbar.scss
+++ b/src/shared/styles/navbar.scss
@@ -9,6 +9,7 @@
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
 
   h1 {
+    font-weight: bold;
     font-size: 1.4rem;
     padding: 0.7rem 0.5rem;
   }
