--- a/src/shared/styles/footer.scss
+++ b/src/shared/styles/footer.scss
@@ -15,10 +15,17 @@ footer {
       flex: 1;
     }
 
-    h1 {
+    a h1 {
       font-weight: bold;
       font-size: 1.4rem;
       margin-bottom: 0.5rem;
+      color: $dark-gray;
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: $black;
+      }
     }
 
     h3 {
