--- a/src/shared/styles/footer.scss
+++ b/src/shared/styles/footer.scss
@@ -20,6 +20,7 @@ footer {
       font-size: 1.4rem;
       margin-bottom: 0.5rem;
       color: $dark-gray;
+      display: inline-block;
 
       &:hover,
       &:focus,
