--- a/src/shared/styles/text.scss
+++ b/src/shared/styles/text.scss
@@ -6,12 +6,20 @@
   font-weight: bold;
 }
 
-.itallic {
+.italic {
   font-style: italic;
 }
 
 .light-gray-text {
   color: $light-gray;
+
+  a {
+    color: $light-gray;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .medium-gray-text {
