Props for dropdowns

--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -5,6 +5,7 @@
 @import './text';
 @import './sidebar';
 @import './filter';
+@import './dining';
 
 /**
  * General styling for the whole application
