--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -19,4 +19,6 @@ $dark-gray: #4A4A4A;
 $medium-gray: #737373;
 $light-gray: #B2B2B2;
 $allbirds-gray: #EAEAEA;
+$focus-gray: #F0F0F0;
+$hover-gray: #F8F8F8;
 $white: #FFFFFF;
