--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -9,60 +9,54 @@
     display: inline-block;
     width: auto;
     font-weight: bold;
-    margin-top: 0.6rem;
+    margin-top: 0.4rem;
   }
 
-  .dropdown {
-    min-width: 20vw;
-    display: inline-block;
-    background: white;
-    border-radius: 0.4rem;
+  .select {
     margin-left: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.075);
-    font-weight: bold;
-    cursor: hand;
-    cursor: pointer;
-    box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
-    transition: all 0.2s ease;
 
-    &:hover {
-      box-shadow: 0rem 0.15rem 0.2rem rgba(0, 0, 0, 0.05);
+    &::after {
+      border-top-style: initial;
+      border-top-width: 0px;
+      border-right-color: initial;
+      border-right-style: initial;
+      border-right-width: 0px;
+      border-bottom-color: $light-gray;
+      border-bottom-style: solid;
+      border-bottom-width: 2px;
+      border-left-color: $light-gray;
+      border-left-style: solid;
+      border-left-width: 2px;
+      border-image-source: initial;
+      border-image-slice: initial;
+      border-image-width: initial;
+      border-image-outset: initial;
+      border-image-repeat: initial;
     }
 
-    p {
-      margin: 0;
-      padding: 0.6rem 2.6rem 0.6rem 0.8rem;
-
-      .fa {
-        position: absolute;
-        right: 0.8rem;
-        top: 0.8rem;
+    &:hover,
+    &:active,
+    &:focus {
+      &::after {
+        border-bottom-color: $medium-gray;
+        border-left-color: $medium-gray;
       }
     }
 
-    ul {
-      display: none;
-      border-top: 1px solid $focus-gray;
-      padding: 0.6rem 0rem;
+    select.dropdown {
+      min-width: 20vw;
+      display: inline-block;
+      background: white;
+      border-radius: 0.4rem;
+      border: 1px solid rgba(0, 0, 0, 0.075);
+      font-weight: bold;
+      cursor: hand;
+      cursor: pointer;
+      box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
+      transition: all 0.2s ease;
 
-      &.active {
-        display: block;
-      }
-
-      li {
-        padding: 0.2rem 2.6rem 0.2rem 0.8rem;
-        color: $medium-gray;
-
-        &:hover {
-          background: $hover-gray;
-          color: $dark-gray;
-        }
-
-        &:focus,
-        &:active {
-          background: $focus-gray;
-          color: $dark-gray;
-        }
+      &:hover {
+        box-shadow: 0rem 0.15rem 0.2rem rgba(0, 0, 0, 0.05);
       }
     }
   }
