--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -61,3 +61,51 @@
     }
   }
 }
+
+.diningOverview {
+  width: 100%;
+  margin-bottom: 1rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+
+  .tabToggles {
+    width: 100%;
+    display: flex;
+
+    .tabToggle {
+      flex: 1;
+      background: $focus-gray;
+      padding: 0.5rem 1rem;
+      font-weight: bold;
+      border-radius: 0.4rem 0.4rem 0rem 0rem;
+      border: 1px solid $allbirds-gray;
+      cursor: pointer;
+      cursor: hand;
+      color: $medium-gray;
+
+      &:hover {
+        color: $dark-gray;
+        background: $hover-gray;
+      }
+
+      &.active {
+        background: white;
+        border-bottom: 1px solid transparent;
+        cursor: auto;
+        color: $dark-gray;
+      }
+    }
+  }
+
+  .tab {
+    background: white;
+    border-radius: 0rem 0rem 0.4rem 0.4rem;
+    border: 1px solid $allbirds-gray;
+    border-top: 0px solid transparent;
+    padding: 1rem;
+    display: none;
+
+    &.active {
+      display: block;
+    }
+  }
+}
