--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -65,7 +65,7 @@
 .diningOverview {
   width: 100%;
   margin-bottom: 1rem;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
 
   .tabToggles {
     width: 100%;
@@ -107,5 +107,26 @@
     &.active {
       display: block;
     }
+
+    .timeRemaining {
+      margin-top: 0.6rem;
+      margin-bottom: 0.6rem;
+      font-size: 1.4rem;
+      padding: 0.5rem 1rem;
+      border: 2px solid $allbirds-gray;
+      display: inline-block;
+      font-weight: bold;
+      color: $blue;
+    }
   }
+}
+
+.menu {
+  margin-top: 1.2rem;
+  width: 100%;
+  background: white;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  border: 1px solid $allbirds-gray;
+  box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
 }
