Resolve action dispatch issues on update

--- a/src/shared/styles/sidebar.scss
+++ b/src/shared/styles/sidebar.scss
@@ -18,6 +18,10 @@
     .sidebarSection {
       margin-bottom: 1rem;
 
+      a {
+        color: $medium-gray;
+      }
+
       li {
         cursor: hand;
         cursor: pointer;
