--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -123,43 +123,58 @@
 
 .menu {
   margin-top: 1.2rem;
+  margin-right: 0rem;
+  margin-left: 0rem;
   width: 100%;
-  // background: white;
-  // padding: 1rem;
-  // border-radius: 0.4rem;
-  // border: 1px solid $allbirds-gray;
-  // box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
 }
 
-.menuSection {
-  margin-bottom: 1rem;
-  padding: 1rem 1rem 0.2rem 1rem;
-
-  h3.title {
-    font-size: 1rem;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
+@media screen and (min-device-width: 1024px) and (min-width: 548px) {
+  .menu {
+    -moz-column-count: 2;
+    -moz-column-gap: 0%;
+    -moz-column-width: 50%;
+    -webkit-column-count:2;
+    -webkit-column-gap: 0%;
+    -webkit-column-width: 50%;
+    column-count: 2;
+    column-gap: 0%;
+    column-width: 50%;
   }
+}
 
-  .menuItem {
-    margin-bottom: 1rem;
+.menuSectionWrapper {
+  padding-bottom: 1rem;
+  display: inline-block;
 
-    .title {
-      font-size: 0.8rem;
-      font-weight: 400;
-      margin-bottom: 0.2rem;
+  .menuSection {
+    padding: 1rem 1rem 0.2rem 1rem;
 
-      &::first-letter {
-        text-transform: uppercase;
-      }
+    h3.title {
+      font-size: 1rem;
+      text-transform: uppercase;
+      margin-bottom: 1rem;
     }
 
-    .description {
-      font-size: 0.8rem;
-      color: $medium-gray;
+    .menuItem {
+      margin-bottom: 1rem;
 
-      &::first-letter {
-        text-transform: uppercase;
+      .title {
+        font-size: 0.8rem;
+        font-weight: 400;
+        margin-bottom: 0.2rem;
+
+        &::first-letter {
+          text-transform: uppercase;
+        }
+      }
+
+      .description {
+        font-size: 0.8rem;
+        color: $medium-gray;
+
+        &::first-letter {
+          text-transform: uppercase;
+        }
       }
     }
   }
