--- a/src/shared/styles/home.scss
+++ b/src/shared/styles/home.scss
@@ -20,3 +20,12 @@ $success: #EAEAEA;
   color: 737373 !important;
   // font-family: "Avenir Next" sans-serif;
 }
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.spacer-20 {
+  width: 20px;
+  height: 10px;
+}
