--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -66,59 +66,10 @@
   width: 100%;
   margin-bottom: 1rem;
   box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
-
-  .tabToggles {
-    width: 100%;
-    display: flex;
-
-    .tabToggle {
-      flex: 1;
-      background: $focus-gray;
-      padding: 0.5rem 1rem;
-      font-weight: bold;
-      border-radius: 0.4rem 0.4rem 0rem 0rem;
-      border: 1px solid $allbirds-gray;
-      cursor: pointer;
-      cursor: hand;
-      color: $medium-gray;
-
-      &:hover {
-        color: $dark-gray;
-        background: $hover-gray;
-      }
-
-      &.active {
-        background: white;
-        border-bottom: 1px solid transparent;
-        cursor: auto;
-        color: $dark-gray;
-      }
-    }
-  }
-
-  .tab {
-    background: white;
-    border-radius: 0rem 0rem 0.4rem 0.4rem;
-    border: 1px solid $allbirds-gray;
-    border-top: 0px solid transparent;
-    padding: 1rem;
-    display: none;
-
-    &.active {
-      display: block;
-    }
-
-    .timeRemaining {
-      margin-top: 0.6rem;
-      margin-bottom: 0.6rem;
-      font-size: 1.4rem;
-      padding: 0.5rem 1rem;
-      border: 2px solid $allbirds-gray;
-      display: inline-block;
-      font-weight: bold;
-      color: $blue;
-    }
-  }
+  background: #FFF;
+  border-radius: 0.4rem;
+  border: 1px solid $allbirds-gray;
+  padding: 1rem;
 }
 
 .menu {
@@ -162,9 +113,12 @@
       margin-bottom: 1rem;
 
       .title {
-        font-size: 0.8rem;
+        font-size: 1rem;
         font-weight: bold;
-        margin-bottom: 0.2rem;
+        margin-bottom: 0.4rem;
+        margin-right: 0.3rem;
+        width: auto;
+        display: inline-block;
 
         &::first-letter {
           text-transform: uppercase;
@@ -180,5 +134,46 @@
 
   &::first-letter {
     text-transform: uppercase;
+  }
+}
+
+.tag {
+  opacity: 0.7;
+  margin-right: 0.3rem;
+  margin-bottom: 0.2rem;
+  font-weight: bold;
+  color: #FFF !important;
+  background: $light-gray !important;
+
+  &.vegetarian {
+    background: $green !important;
+  }
+
+  &.gf {
+    background: $gold !important;
+  }
+
+  &.humane {
+    background: $red !important;
+  }
+
+  &.seafoodWatch {
+    background: $blue !important;
+  }
+
+  &.vegan {
+    background: $forest !important;
+  }
+
+  &.balanced {
+    background: $purple !important;
+  }
+
+  &.farm {
+    background: $brown !important;
+  }
+
+  &:hover {
+    opacity: 1;
   }
 }
