--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -12,6 +12,8 @@ $red: #DF5D56;
 $green: #76BF96;
 $gold: #FFC107;
 $purple: #6274F1;
+$forest: #238A50;
+$brown: #BF8E41;
 
 // Neutrals
 $black: #000000;
