--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -24,3 +24,14 @@ $allbirds-gray: #EAEAEA;
 $focus-gray: #F0F0F0;
 $hover-gray: #F8F8F8;
 $white: #FFFFFF;
+
+// Tags
+$vegan: #3D9857;
+$humane: #FF9E41;
+$gluten-free: #F1BD54;
+$farm-to-table: #C08853;
+$balanced: #9976C0;
+$seafood-watch: #60CDEB;
+$local: #F28166;
+$vegetarian: #A4BA50;
+$jain: #7180D8;
