--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -29,7 +29,7 @@ $white: #FFFFFF;
 $vegan: #3D9857;
 $humane: #FF9E41;
 $gluten-free: #F1BD54;
-$farm-to-table: #C08853;
+$farm-to-fork: #C08853;
 $balanced: #9976C0;
 $seafood-watch: #60CDEB;
 $local: #F28166;
