fixed tag colors

--- a/src/shared/styles/home.scss
+++ b/src/shared/styles/home.scss
@@ -35,3 +35,18 @@ $success: #EAEAEA;
 .link {
   text-decoration: none !important;
 }
+
+.tag-is-blue {
+  background-color: #8390E1 !important;
+  color: white !important;
+}
+
+.tag-is-yellow {
+  background-color: #FFBA40 !important;
+  color: white !important;
+}
+
+.tag-is-green {
+  background-color: #8EC82D !important;
+  color: white !important;
+}
