--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -62,7 +62,7 @@
   }
 }
 
-.diningOverview {
+.overview {
   width: 100%;
   margin-bottom: 1rem;
   box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
