Fixing home.scss major issue

--- a/src/shared/styles/home.scss
+++ b/src/shared/styles/home.scss
@@ -1,10 +1,10 @@
-@import "./node_modules/bulma/sass/utilities/initial-variables";
+// @import "./node_modules/bulma/sass/utilities/initial-variables";
 
-$blue: #6190E8;
-$green: #5BD3B8;
-$primary: $green;
-$danger: #F2BE64;
-$success: #EAEAEA;
+// $blue: #6190E8;
+// $green: #5BD3B8;
+// $primary: $green;
+// $danger: #F2BE64;
+// $success: #EAEAEA;
 
 .spacer {
   height: 30px;
