--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -7,7 +7,7 @@ $blue: #2980B9;
 $light-blue: #C6E8FF;
 $light-blue-hover: #A3D9FF;
 $dark-blue: #172B4D;
-$snow: #FAFCFF;
+$snow: #edf0f4;
 
 // Secondary colors
 $red: #DF5D56;
