fixed rar and dining homepage

--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -6,10 +6,9 @@
 @import './sidebar';
 @import './filter';
 @import './dining';
+@import './home';
 
-/**
- * General styling for the whole application
- */
+//General styling for the whole application
 
 #app {
   background: $snow;
