--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -7,9 +7,8 @@
 @import './filter';
 @import './dining';
 
-/**
- * General styling for the whole application
- */
+// General styling for the whole application
+ 
 
 #app {
   background: $snow;
@@ -65,9 +64,8 @@
   display: none !important;
 }
 
-/**
- * Padding on different screen sizes
- */
+// Padding on different screen sizes
+ 
 @media screen and (min-device-width: 1024px) and (min-width: 848px) {
   #app {
     padding: 2rem;
