--- a/src/shared/styles/spacing.scss
+++ b/src/shared/styles/spacing.scss
@@ -1,6 +1,4 @@
-/**
- * GENERAL SPACER CLASSES
- */
+// GENERAL SPACER CLASSES
 
 .space-0,
 .space-1,
@@ -32,9 +30,7 @@
   height: 4rem;
 }
 
-/**
- * GENERAL MARGIN CLASSES
- */
+// GENERAL MARGIN CLASSES
 
 .marg-top-0 {
   margin-top: 0rem;
@@ -68,9 +64,8 @@
   margin-bottom: 2rem;
 }
 
-/**
- * GENERAL PADDING CLASSES
- */
+// GENERAL PADDING CLASSES
+ 
 
 .pad-0 {
   padding: 0rem;
