--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -44,7 +44,7 @@
     select.dropdown {
       min-width: 20vw;
       display: inline-block;
-      background: white;
+      background: $white;
       border-radius: 0.4rem;
       border: 1px solid rgba(0, 0, 0, 0.075);
       font-weight: bold;
