--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -19,10 +19,8 @@
   min-height: calc(100vh - 50px);
 
   .card {
-    border: 1px solid rgba(0, 0, 0, 0.075);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.07);
     background: white;
-    border-radius: 0.4rem;
     opacity: 1;
   }
 }
