--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -1,12 +1,9 @@
-// COLOR PALETTE
-
-
 // Primary colors
 $blue: #2980B9;
 $light-blue: #C6E8FF;
 $light-blue-hover: #A3D9FF;
 $dark-blue: #172B4D;
-$snow: #edf0f4;
+$snow: #fafcff;
 
 // Secondary colors
 $red: #DF5D56;
