--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -22,6 +22,14 @@
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.07);
     background: white;
     opacity: 1;
+
+    &.pad {
+      padding: 1rem;
+    }
+
+    &.marg {
+      margin-bottom: 1.5rem;
+    }
   }
 }
 
