--- a/src/shared/styles/app.scss
+++ b/src/shared/styles/app.scss
@@ -13,10 +13,9 @@
 
 #app {
   background: $snow;
-  padding: 1rem;
 
   // Ensure the height of the app is at least the height of the screen
-  min-height: calc(100vh - 50px);
+  min-height: calc(100vh - 56px);
 
   .card {
     box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.07);
@@ -39,20 +38,20 @@
   padding: 0.6rem 1rem;
   display: inline-block;
   border: 1px solid rgba(0, 0, 0, 0.075);
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   background: white;
   border-radius: 0.4rem;
   opacity: 1;
   outline: $medium-gray !important;
 
   &:hover {
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background: #FAFAFA;
     border: 1px solid rgba(0, 0, 0, 0.1);
   }
 
-  &:focus,
-  &:active {
+  &:active,
+  &:focus {
     background: #F8F8F8;
     outline: $medium-gray !important;
   }
@@ -69,30 +68,4 @@
 
 .display-none {
   display: none !important;
-}
-
-// Padding on different screen sizes
-
-@media screen and (min-device-width: 1024px) and (min-width: 848px) {
-  #app {
-    padding: 2rem;
-  }
-}
-
-@media screen and (min-device-width: 1024px) and (min-width: 956px) {
-  #app {
-    padding: 2rem 4rem;
-  }
-}
-
-@media screen and (min-device-width: 1024px) and (min-width: 1024px) {
-  #app {
-    padding: 2rem 6rem;
-  }
-}
-
-@media screen and (min-device-width: 1024px) and (min-width: 1208px) {
-  #app {
-    padding: 2rem 8rem;
-  }
 }
