--- a/src/shared/styles/navbar.scss
+++ b/src/shared/styles/navbar.scss
@@ -1,14 +1,13 @@
 .navbar {
-  padding: 0rem 0.5rem;
+  padding: 0 0.5rem;
   border-bottom: 1px solid $allbirds-gray;
   display: flex;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15);
 
-  .logo{
+  .logo {
     img {
       display: inline-block;
       height: 3.4rem;
-      padding: 0.4rem 0rem 0.4rem 0.5rem;
+      padding: 0.4rem 0 0.4rem 0.5rem;
       width: auto;
       position: absolute;
       top: 0;
@@ -20,9 +19,9 @@
       padding: 0.7rem 0.5rem 0.7rem 3.2rem;
       color: $dark-gray;
 
-      &:hover,
+      &:active,
       &:focus,
-      &:active {
+      &:hover {
         color: $black;
       }
     }
@@ -31,7 +30,7 @@
   ul {
     flex: 1;
     text-align: right;
-    padding: 0rem 0.5rem;
+    padding: 0 0.5rem;
 
     li {
       display: inline-block;
@@ -40,9 +39,9 @@
       a {
         color: $light-gray;
 
-        &:hover,
+        &:active,
         &:focus,
-        &:active {
+        &:hover {
           color: $medium-gray;
         }
       }
@@ -78,7 +77,7 @@
 @media screen and (max-width: 764px) {
   .navbar {
     display: block;
-    padding: 0rem;
+    padding: 0;
 
     #sidebar-toggle {
       display: inline-block;
@@ -112,7 +111,7 @@
 @media screen and (max-device-width: 764px) {
   .navbar {
     display: block;
-    padding: 0rem;
+    padding: 0;
 
     #sidebar-toggle {
       display: inline-block;
