--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -65,6 +65,7 @@
   margin-bottom: 1rem;
   box-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
   background: #FFF;
+  box-sizing: border-box;
   border-radius: 0.4rem;
   border: 1px solid $allbirds-gray;
   padding: 1rem;
