refactoring / cleaning stuffs

--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -242,7 +242,7 @@
           }
         }
 
-        // OPen during earlier half hour
+        // Open during earlier half hour
         &.open-left {
           background: white;
           background: -webkit-linear-gradient(left, $light-blue 50%, white 50%);
