--- a/src/shared/styles/navbar.scss
+++ b/src/shared/styles/navbar.scss
@@ -6,7 +6,7 @@
 
     li {
       display: inline-block;
-      padding: 1rem 0.5rem;
+      padding: 1rem 0 1rem 1rem;
 
       a {
         color: $light-gray;
