cleaning up dining menus, css

--- a/src/shared/styles/palette.scss
+++ b/src/shared/styles/palette.scss
@@ -1,35 +1,35 @@
 // Primary colors
-$blue: #2980B9;
-$light-blue: #C6E8FF;
-$light-blue-hover: #A3D9FF;
-$dark-blue: #172B4D;
+$blue: #2980b9;
+$light-blue: #c6e8ff;
+$light-blue-hover: #a3d9ff;
+$dark-blue: #172b4d;
 $snow: #fafcff;
 
 // Secondary colors
-$red: #DF5D56;
-$green: #76BF96;
-$gold: #FFC107;
-$purple: #6274F1;
-$forest: #238A50;
-$brown: #BF8E41;
+$red: #df5d56;
+$green: #76bf96;
+$gold: #ffc107;
+$purple: #6274f1;
+$forest: #238a50;
+$brown: #bf8e41;
 
 // Neutrals
 $black: #000000;
-$dark-gray: #4A4A4A;
+$dark-gray: #4a4a4a;
 $medium-gray: #737373;
-$light-gray: #B2B2B2;
-$allbirds-gray: #EAEAEA;
-$focus-gray: #F0F0F0;
-$hover-gray: #F8F8F8;
-$white: #FFFFFF;
+$light-gray: #b2b2b2;
+$allbirds-gray: #eaeaea;
+$focus-gray: #f0f0f0;
+$hover-gray: #f8f8f8;
+$white: #ffffff;
 
 // Tags
-$vegan: #3D9857;
-$humane: #FF9E41;
-$gluten-free: #F1BD54;
-$farm-to-fork: #C08853;
-$balanced: #9976C0;
-$seafood-watch: #60CDEB;
-$local: #F28166;
-$vegetarian: #A4BA50;
-$jain: #7180D8;
+$vegan: #3d9857;
+$humane: #ff9e41;
+$gluten-free: #f1bd54;
+$farm-to-fork: #c08853;
+$balanced: #9976c0;
+$seafood-watch: #60cdeb;
+$local: #f28166;
+$vegetarian: #a4ba50;
+$jain: #7180d8;
