--- a/src/shared/styles/dining.scss
+++ b/src/shared/styles/dining.scss
@@ -1,171 +1,11 @@
 //Styling for dining components
 
-.diningQuery {
-  margin-top: 0.6rem;
-
-  p {
-    display: inline-block;
-    width: auto;
-    font-weight: bold;
-    margin-top: 0.4rem;
-  }
-
-  .select {
-    margin-left: 1rem;
-
-    &::after {
-      border-top-style: initial;
-      border-top-width: 0;
-      border-right-color: initial;
-      border-right-style: initial;
-      border-right-width: 0;
-      border-bottom-color: $light-gray;
-      border-bottom-style: solid;
-      border-bottom-width: 2px;
-      border-left-color: $light-gray;
-      border-left-style: solid;
-      border-left-width: 2px;
-      border-image-source: initial;
-      border-image-slice: initial;
-      border-image-width: initial;
-      border-image-outset: initial;
-      border-image-repeat: initial;
-    }
-
-    &:active,
-    &:focus,
-    &:hover {
-      &::after {
-        border-bottom-color: $medium-gray;
-        border-left-color: $medium-gray;
-      }
-    }
-
-    select.dropdown {
-      min-width: 20vw;
-      display: inline-block;
-      background: $white;
-      border-radius: 0.4rem;
-      border: 1px solid rgba(0, 0, 0, 0.075);
-      font-weight: bold;
-      cursor: hand;
-      cursor: pointer;
-      box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.025);
-      transition: all 0.2s ease;
-
-      &:hover {
-        box-shadow: 0 0.15rem 0.2rem rgba(0, 0, 0, 0.05);
-      }
-    }
-  }
-}
-
-.menu {
-  margin-top: 1.2rem;
-  margin-right: 0;
-  margin-left: 0;
-  width: 100%;
-}
-
-@media screen and (min-device-width: 1024px) and (min-width: 548px) {
-  .menu {
-    -moz-column-count: 2;
-    -moz-column-gap: 0;
-    -moz-column-width: 50%;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 0;
-    -webkit-column-width: 50%;
-    column-count: 2;
-    column-gap: 0;
-    column-width: 50%;
-  }
-}
-
-.menuSectionWrapper {
-  padding-bottom: 1rem;
-  display: inline-block;
-  width: 100%;
-  margin: 0 -0.5rem;
-
-  .menuSection {}
-}
-
 .description {
   font-size: 0.8rem;
   color: $medium-gray;
 
   &::first-letter {
     text-transform: uppercase;
-  }
-}
-
-.tag {
-  opacity: 0.7;
-  margin-right: 0.3rem;
-  margin-bottom: 0.2rem;
-  font-weight: bold;
-  color: #FFF !important;
-  background: $light-gray !important;
-
-  &.vegetarian {
-    background: $vegetarian !important;
-  }
-
-  &.gluten-free {
-    background: $gluten-free !important;
-  }
-
-  &.humane {
-    background: $humane !important;
-  }
-
-  &.seafood-watch {
-    background: $seafood-watch !important;
-  }
-
-  &.vegan {
-    background: $vegan !important;
-  }
-
-  &.balanced {
-    background: $balanced !important;
-  }
-
-  &.farm-to-fork {
-    background: $farm-to-fork !important;
-  }
-
-  &.jain {
-    background: $jain !important;
-  }
-
-  &.local {
-    background: $local !important;
-  }
-
-  &:hover {
-    opacity: 1;
-  }
-}
-
-.legend {
-  padding-top: 1rem;
-  font-size: 0.8rem;
-  color: $medium-gray;
-
-  strong {
-    display: block;
-    font-size: 1rem;
-    padding-bottom: 1rem;
-    width: 100%;
-  }
-
-  .legend-item {
-    .tag {
-      margin-bottom: 0.4rem;
-      opacity: 1;
-    }
-    padding: 0 0 1.2rem;
   }
 }
 
@@ -235,10 +75,26 @@
           background: linear-gradient(to right, white 50%, $light-blue 50%);
 
           &:hover {
-            background: -webkit-linear-gradient(left, white 50%, $light-blue-hover 50%);
-            background: -o-linear-gradient(right, white 50%, $light-blue-hover 50%);
-            background: -moz-linear-gradient(right, white 50%, $light-blue-hover 50%);
-            background: linear-gradient(to right, white 50%, $light-blue-hover 50%);
+            background: -webkit-linear-gradient(
+              left,
+              white 50%,
+              $light-blue-hover 50%
+            );
+            background: -o-linear-gradient(
+              right,
+              white 50%,
+              $light-blue-hover 50%
+            );
+            background: -moz-linear-gradient(
+              right,
+              white 50%,
+              $light-blue-hover 50%
+            );
+            background: linear-gradient(
+              to right,
+              white 50%,
+              $light-blue-hover 50%
+            );
           }
         }
 
@@ -251,10 +107,26 @@
           background: linear-gradient(to right, $light-blue 50%, white 50%);
 
           &:hover {
-            background: -webkit-linear-gradient(left, $light-blue-hover 50%, white 50%);
-            background: -o-linear-gradient(right, $light-blue-hover 50%, white 50%);
-            background: -moz-linear-gradient(right, $light-blue-hover 50%, white 50%);
-            background: linear-gradient(to right, $light-blue-hover 50%, white 50%);
+            background: -webkit-linear-gradient(
+              left,
+              $light-blue-hover 50%,
+              white 50%
+            );
+            background: -o-linear-gradient(
+              right,
+              $light-blue-hover 50%,
+              white 50%
+            );
+            background: -moz-linear-gradient(
+              right,
+              $light-blue-hover 50%,
+              white 50%
+            );
+            background: linear-gradient(
+              to right,
+              $light-blue-hover 50%,
+              white 50%
+            );
           }
         }
       }
