--- a/src/shared/styles/sidebar.scss
+++ b/src/shared/styles/sidebar.scss
@@ -98,7 +98,7 @@
   &.fade-in {
     display: block;
     opacity: 0;
-    animation: fadeIn .4s ease-in 1 forwards;
+    animation: fadeIn 0.4s ease-in 1 forwards;
   }
 }
 
@@ -123,7 +123,7 @@
 
 // Have a slide-in effect for the sidebar on smaller screens
 @media screen and (max-width: 764px) {
-  #wrapper{
+  #wrapper {
     display: block;
 
     .sidebar {
@@ -147,7 +147,7 @@
 // Copy of the above code for devices that may have a high resolution
 // but have a low physical size (ex. phones)
 @media screen and (max-device-width: 764px) {
-  #wrapper{
+  #wrapper {
     display: block;
 
     .sidebar {
