--- a/src/shared/styles/spinner.scss
+++ b/src/shared/styles/spinner.scss
@@ -10,13 +10,16 @@
 // Animating the loading spinner
 #loading {
   -webkit-animation: rotation 7s infinite linear;
+  animation: rotation 7s infinite linear;
 }
 
-@-webkit-keyframes rotation {
+@keyframes rotation {
   from {
     -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
     -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
   }
 }
